[gd_scene load_steps=11 format=3 uid="uid://6rwodttxndbo"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_kthfa"]
[ext_resource type="Texture2D" uid="uid://ntslj1vkme5s" path="res://Space Shooter Visual Assets/PNG/Meteors/meteorBrown_tiny1.png" id="2_glodv"]
[ext_resource type="Texture2D" uid="uid://c2hbaftj5islm" path="res://Space Shooter Visual Assets/Explosion-stars.png" id="3_n8d2r"]
[ext_resource type="AudioStream" uid="uid://cvqniu06e5fai" path="res://Space Shooter Visual Assets/Bonus/sfx_laser2.ogg" id="4_mcegm"]
[ext_resource type="AudioStream" uid="uid://cl833ecckjd0n" path="res://Space Shooter Visual Assets/Bonus/sfx_laser1.ogg" id="5_c2qx2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_kiwo3"]
bounce = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_2rnp5"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_awp76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0agil"]
resource_name = "explode"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"remove"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_waec1"]
_data = {
"RESET": SubResource("Animation_awp76"),
"explode": SubResource("Animation_0agil")
}

[node name="Projectile" type="RigidBody2D" groups=["projectile"]]
collision_layer = 8
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_kiwo3")
freeze_mode = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_kthfa")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_glodv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2rnp5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="Explosion" type="Sprite2D" parent="."]
texture = ExtResource("3_n8d2r")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Explosion"]
libraries = {
"": SubResource("AnimationLibrary_waec1")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Explosion"]
stream = ExtResource("4_mcegm")
volume_db = -8.667

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_c2qx2")
pitch_scale = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
